--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "/Users/DougFoo/anaconda2/bin/python",
     "python.linting.enabled": true,
+    "python.unitTest.pyTestEnabled": true,
     "python.linting.pylintPath": "/Users/dougfoo/anaconda2/bin/pylint"
 }
