--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-    "python.pythonPath": "/Users/DougFoo/anaconda2/bin/python",
+    "python.pythonPath": "/c//Users/DougFoo/anaconda3/python",
     "python.linting.enabled": true,
     "python.unitTest.pyTestEnabled": false,
-    "python.linting.pylintPath": "/Users/dougfoo/anaconda2/bin/pylint"
+    "python.linting.pylintPath": "/Users/dougfoo/anaconda3/scripts/pylint",
+    "python.unitTest.pyTestArgs": [
+        "."
+    ]
 }
